8.2.3
- Usability: Change settings spinners to selection lists

8.2.2
- Fix: kissnet update fixing Windows socket connection issue

8.2.1
- Fix: kissnet update fixing socket creation/connection issue

8.2.0
- PVR API 7.1.0 - API change to allow epg max future and past days

8.1.3
- Fix: Obtain streaming profiles as soon as connected to backend
- Fix: On system sleep, properly close demuxers before disconnecting from backend
- Fix: Predictive Tuning: Prevent closing the subscription while re-subscribing to it
- Fix: Error handling for socket read/write operations
- Improvement: Demux read detects lost backend connection and initiates re-connect
- Fix: Fix crashes while accessing socket concurrently
- Fix: Do not reset source info when re-subscribing

8.1.2
- More IPv6 fixes

8.1.1
- Fix IPv6 support

8.1.0
- Update inputstream API 3.0.1
  - Fix wrong flags bit shift

8.0.0
- Update PVR API 7.0.2

7.2.2
- Fix toggling of HTTP streaming setting

7.2.1
- Fix 'pvr.hts' appearing twice in every addon log message
- Fix calculation of start time, stop time and file size for multi-file recordings
- Remove p8-platform build dependency

7.2.0
- Add capability to use HTTP streaming instead of HTSP

7.1.4
- Fix deadlock while reconnecting to backend after a backend response timeout (Fixes #465)
- Refactor subscription seek code
- Refactor subscription weight code
- Fix HTSP connection thread not ended while in supended state

7.1.3
- Withdraw v7.1.2 due to new deadlocks it introduces, for example during initial connect to backend.

7.1.2
- Fix deadlock while reconnecting to backend after a backend response timeout (Fixes #465)

7.1.1
- Fix 'provider name' and 'device status' signal status values after update to PVR API 7.0.0

7.1.0
- Add new setting value for recordings lifetime of timers created by Kodi: 'Use backend setting"
- Change default value for 'lifetime' setting from '3 months' to 'Use backend setting' to
  avoid unintended loss of data