@@ -239,8 +239,17 @@
               <option label="30357">1</option> <!-- Record if episode number differs -->
               <option label="30358">2</option> <!-- Record if episode name differs -->
               <option label="30359">3</option> <!-- Record if description differs -->
+              <option label="30370">12</option> <!-- tvh 4.2+: Record max once per month -->
               <option label="30360">4</option> <!-- Record max once per week -->
               <option label="30361">5</option> <!-- Record max once per day -->
+              <option label="30362">6</option> <!-- tvh 4.2+: This rule only: Record if episode number differs -->
+              <option label="30364">8</option> <!-- tvh 4.2+: This rule only: Record if title differs -->
+              <option label="30363">7</option> <!-- tvh 4.2+: This rule only: Record if episode name differs -->
+              <option label="30365">9</option> <!-- tvh 4.2+: This rule only: Record if description differs -->
+              <option label="30371">13</option> <!-- tvh 4.2+: This rule only: Record max once per month -->
+              <option label="30366">10</option> <!-- tvh 4.2+: This rule only: Record max once per week -->
+              <option label="30367">11</option> <!-- tvh 4.2+: This rule only: Record max once per day -->
+              <option label="30372">14</option> <!-- tvh 4.3+: Record if unique episode according EPG/XMLTV -->
             </options>
           </constraints>
           <control type="list" format="string" />
